--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "depd": "^2.0.0",
     "dotenv": "^16.4.7",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
@@ -18,6 +19,8 @@
     "moment": "^2.30.1",
     "mongoose": "^8.12.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "node-xlsx": "^0.24.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "winston": "^3.17.0"
