--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,8 @@
     "debug": "~2.6.9",
     "depd": "^2.0.0",
     "dotenv": "^16.4.7",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "http-errors": "~1.6.3",
     "is_js": "^0.9.0",
     "jwt-simple": "^0.5.6",
